[gd_scene load_steps=9 format=3 uid="uid://bm6pa0huhw5kg"]

[ext_resource type="Script" path="res://scenes/circle_trainer/circle_trainer.gd" id="1_52hda"]
[ext_resource type="PackedScene" uid="uid://d1e5t3605hrpa" path="res://scenes/trainer_ui/trainer_ui.tscn" id="2_bhn12"]
[ext_resource type="PackedScene" uid="uid://r6egmegqdfch" path="res://scenes/drawing/drawing.tscn" id="2_kl7y5"]

[sub_resource type="Curve" id="Curve_e4y6g"]
_data = [Vector2(0, 0), 0.0, 2.0, 0, 1, Vector2(0.5, 1), 2.0, -2.0, 1, 1, Vector2(1, 0), -2.0, 0.0, 1, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_mnccw"]
_data = [Vector2(0, 0), 0.0, 2.0, 0, 1, Vector2(0.5, 1), 2.0, -2.0, 1, 1, Vector2(1, 0), -2.0, 0.0, 1, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_gjnhb"]
_data = [Vector2(0, 1), 0.0, -1.0, 0, 1, Vector2(1, 0), -1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_yxljw"]
_data = [Vector2(0, 1), 0.0, -1.0, 0, 1, Vector2(1, 0), -1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="Theme" id="Theme_u6e8b"]
Label/font_sizes/font_size = 20

[node name="CircleTrainer" type="Node2D"]
script = ExtResource("1_52hda")
precision_length_curve = SubResource("Curve_e4y6g")
precision_coverage_curve = SubResource("Curve_mnccw")
precision_distance_sum_curve = SubResource("Curve_gjnhb")
precision_distance_average_curve = SubResource("Curve_yxljw")

[node name="TrainerUI" parent="." instance=ExtResource("2_bhn12")]

[node name="Drawing" parent="." instance=ExtResource("2_kl7y5")]

[node name="InfoLabel" type="Label" parent="."]
z_index = 1
offset_left = 20.0
offset_top = 150.0
offset_right = 76.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 25
text = "info"

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 997.0
offset_top = 21.0
offset_right = 1147.0
offset_bottom = 98.0
theme = SubResource("Theme_u6e8b")
columns = 2

[node name="LabelLength" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Length:"
horizontal_alignment = 2

[node name="LabelLengthFactor" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.001"

[node name="HSeparator" type="HSeparator" parent="GridContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="GridContainer"]
layout_mode = 2

[node name="LabelCoverage" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Coverage:"
horizontal_alignment = 2

[node name="LabelCoverageFactor" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.001"

[node name="HSeparator3" type="HSeparator" parent="GridContainer"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="GridContainer"]
layout_mode = 2

[node name="LabelDistanceSum" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Distance, sum:"
horizontal_alignment = 2

[node name="LabelDistanceSumFactor" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.001"

[node name="LabelDistanceAverage" type="Label" parent="GridContainer"]
layout_mode = 2
text = "average:"
horizontal_alignment = 2

[node name="LabelDistanceAverageFactor" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.001"

[node name="HSeparator5" type="HSeparator" parent="GridContainer"]
layout_mode = 2

[node name="HSeparator6" type="HSeparator" parent="GridContainer"]
layout_mode = 2

[node name="HSeparator7" type="HSeparator" parent="GridContainer"]
layout_mode = 2

[node name="HSeparator8" type="HSeparator" parent="GridContainer"]
layout_mode = 2

[node name="LabelPrecisionMul" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Precision, mul:"
horizontal_alignment = 2

[node name="LabelPrecisionMulValue" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.001"

[node name="LabelPrecisionAdd" type="Label" parent="GridContainer"]
layout_mode = 2
text = "add:"
horizontal_alignment = 2

[node name="LabelPrecisionAddValue" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.001"

[connection signal="toggle_debug_info" from="TrainerUI" to="." method="_on_trainer_ui_toggle_debug_info"]
[connection signal="toggle_stats" from="TrainerUI" to="." method="_on_trainer_ui_toggle_stats"]
[connection signal="point_added" from="Drawing" to="." method="_on_drawing_point_added"]
[connection signal="segment_added" from="Drawing" to="." method="_on_drawing_segment_added"]
[connection signal="started" from="Drawing" to="." method="_on_drawing_started"]
[connection signal="started" from="Drawing" to="TrainerUI" method="_on_drawing_started"]
[connection signal="stopped" from="Drawing" to="." method="_on_drawing_stopped"]
[connection signal="stopped" from="Drawing" to="TrainerUI" method="_on_drawing_stopped"]
